--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/4.0.9/scrollreveal.min.js">
     <title>Frontpage</title>bfb
 </head>
-<body>
+<body>. 
     
 <main>
     <div class="wrapper">
