--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         
         <div id="a" class="a">
             <div class="wrap">
-                 <div class="box-about left">
+                 <div class="box-about left">. ffg
                     <div class="content">
                         <div class="title">
                             About me
